@@ -3,43 +3,4 @@ author           = Graham TerMarsch <cpan@howlingfrog.com>
 license          = Perl_5
 copyright_holder = Graham TerMarsch
 
-[@Filter]
--bundle = @Basic
--remove = Readme
--remove = GatherDir
-
-[GatherDir]
-exclude_filename = dist.ini
-
-[ReadmeAnyFromPod / ReadmeGfmInRoot]
-[ReadmeAnyFromPod / ReadmeInDist]
-[Prereqs::FromCPANfile]
-
-[PodSyntaxTests]
-[PodCoverageTests]
-
-[MetaResources]
-bugtracker.web = https://github.com/bleargh45/Data-FormValidator-EmailValid/issues
-repository.web = https://github.com/bleargh45/Data-FormValidator-EmailValid
-repository.url = https://github.com/bleargh45/Data-FormValidator-EmailValid.git
-repository.type = git
-
-[MetaJSON]
-
-[RewriteVersion]
-
-[EnsureChangesHasContent]
-[NextRelease]
-
-; Commit updates to "Changes"
-[Git::Commit / Commit_Changes]
-commit_msg = Release v%V
-
-; Tag the release
-[Git::Tag]
-
-; Bump version, and commit that
-[BumpVersionAfterRelease]
-[Git::Commit / Commit_Next_Version]
-allow_dirty_match = ^lib/
-commit_msg = Version bump.
+[@Author::GTERMARS]
